Release: Transform 콜백 URL + Outbox 비동기 전송 파이프라인 (#145)
* chore: .claude 설정 파일 구조 개편

- 기존 hooks, scripts 제거 (Spring Standards MCP로 대체)
- 새 agents 추가 (implementer, planner, reviewer, shipper, tester)
- 새 commands 추가 (epic, work, next, ship, check, recovery 등)
- 새 skills 추가 (5개 역할별 SKILL.md)
- rules/convention-guide.md 추가
- CLAUDE.md 단순화 (MCP 도구 중심)

* fix: logback 프로필 불일치 수정 (staging → stage)

SPRING_PROFILES_ACTIVE=stage인데 logback-spring.xml에서
prod,staging으로 설정되어 있어 appender가 0개 활성화됨.
모든 에러 로그가 CloudWatch에 기록되지 않는 문제 수정.

* fix(terraform): SQS 환경변수 매핑 수정 및 누락 config import 추가

- resizing-worker: sqs-publish.yml, sqs-publish-stage.yml config import 추가
  (SqsPublisherProperties의 fileflow.sqs.download-queue placeholder 해결)
- download-worker: SQS_DOWNLOAD_QUEUE, SQS_TRANSFORM_QUEUE 환경변수 추가
  (기존 SQS_EXTERNAL_DOWNLOAD_QUEUE_URL과 별도로 sqs-publish-stage.yml에서 참조하는 변수)
- resizing-worker: SQS_DOWNLOAD_QUEUE, SQS_TRANSFORM_QUEUE 환경변수 추가
  (각 worker에 누락된 상대 큐의 SSM 데이터소스도 추가)

* feat(terraform): Stage RDS 연결을 RDS Proxy로 전환 (#137)

Stage 환경의 DB 연결을 직접 RDS에서 RDS Proxy로 변경하여
Prod와 동일한 연결 방식으로 통일합니다.

- Secrets Manager host 대신 SSM /shared/rds/staging-proxy-endpoint 참조
- 4개 ECS 모듈 일괄 적용 (web-api, download-worker, resizing-worker, scheduler)
- credentials(username/password)는 기존 Secrets Manager 유지

* feat(KAN-344): Transactional Outbox, 모니터링 API, 메트릭, Session Recovery (#141)

* fix(terraform): resizing-worker/download-worker/scheduler 누락 환경변수 추가

sqs-publisher 모듈이 4개 부트스트랩 모두에 포함되나
SQS_DOWNLOAD_QUEUE/SQS_TRANSFORM_QUEUE가 web-api에만 있었음.
- resizing-worker: SQS_DOWNLOAD_QUEUE, SQS_TRANSFORM_QUEUE 추가
- download-worker: SQS_DOWNLOAD_QUEUE, SQS_TRANSFORM_QUEUE 추가
- scheduler: S3_BUCKET 추가 (s3-client 모듈 포함)

* fix(terraform): Stage 환경 전체 서비스 누락 환경변수 추가

S3_BUCKET, SQS_DOWNLOAD_QUEUE, SQS_TRANSFORM_QUEUE 환경변수가
Stage 4개 서비스(web-api, scheduler, download-worker, resizing-worker)
모두에 누락되어 Spring placeholder 에러로 태스크 실패.

* feat(sdk): AssetApi에 s3Key 기반 Asset 등록 API 추가 (#138)

* feat(sdk): AssetApi에