@@ -1,12 +1,19 @@
 package com.ryuqq.fileflow.adapter.out.client.http.client;
 
 import com.ryuqq.fileflow.application.download.dto.response.RawDownloadedFile;
+import com.ryuqq.fileflow.application.download.exception.PermanentDownloadFailureException;
 import com.ryuqq.fileflow.application.download.port.out.client.FileDownloadClient;
+import java.net.MalformedURLException;
 import java.net.URI;
+import java.net.URISyntaxException;
+import java.net.URL;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Qualifier;
+import org.springframework.http.MediaType;
+import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Component;
+import org.springframework.web.client.HttpClientErrorException;
 import org.springframework.web.client.RestClient;
 
 @Component
@@ -24,23 +31,65 @@ public class FileDownloadHttpClient implements FileDownloadClient {
     public RawDownloadedFile download(String sourceUrl) {
         log.info("HTTP 파일 다운로드 시작: sourceUrl={}", sourceUrl);
 
-        byte[] fileBytes =
-                restClient.get().uri(URI.create(sourceUrl)).retrieve().body(byte[].class);
+        URI safeUri = toEncodedUri(sourceUrl);
 
+        ResponseEntity<byte[]> response;
+        try {
+            response = restClient.get().uri(safeUri).retrieve().toEntity(byte[].class);
+        } catch (HttpClientErrorException e) {
+            throw new PermanentDownloadFailureException(
+                    "HTTP " + e.getStatusCode().value() + ": " + sourceUrl, e);
+        }
+
+        byte[] fileBytes = response.getBody();
         if (fileBytes == null || fileBytes.length == 0) {
             throw new IllegalStateException("다운로드된 파일이 비어있습니다: " + sourceUrl);
         }
 
-        String fileName = extractFileName(sourceUrl);
-        String contentType = detectContentType(fileName);
+        String fileName = extractFileName(safeUri);
+        String contentType = resolveContentType(response, fileName);
 
-        log.info("HTTP 파일 다운로드 완료: fileName={}, size={}", fileName, fileBytes.length);
+        log.info(
+                "HTTP 파일 다운로드 완료: fileName={}, contentType={}, size={}",
+                fileName,
+                contentType,
+                fileBytes.length);
 
         return RawDownloadedFile.of(fileName, contentType, fileBytes);
     }
 
-    private String extractFileName(String url) {
-        String path = URI.create(url).getPath();
+    @SuppressWarnings("deprecation")
+    private URI toEncodedUri(String sourceUrl) {
+        try {
+            URL url = new URL(sourceUrl.strip());
+            return new URI(
+                    url.getProtocol(),
+                    url.getUserInfo(),
+                    url.getHost(),
+                    url.getPort(),
+                    url.getPath(),
+                    url.getQuery(),
+                    url.getRef());
+        } catch (MalformedURLException | URISyntaxException e) {
+            throw new PermanentDownloadFailureException("유효하지 않은 다운로드 URL: " + sourceUrl, e);
+        }
+    }
+
+    private String resolveContentType(ResponseEntity<byte[]> response, String fileName) {
+        MediaType mediaType = response.getHeaders().getContentType();
+        if (mediaType != null && !isGenericContentType(mediaType)) {
+            return mediaType.getType() + "/" + mediaType.getSubtype();
+        }
+        return detectContentTypeFromFileName(fileName);
+    }
+
+    private boolean isGenericContentType(MediaType mediaType) {
+        return MediaType.APPLICATION_OCTET_STREAM.equalsTypeAndSubtype(mediaType)
+                || MediaType.ALL.equalsTypeAndSubtype(mediaType);
+    }
+
+    private String extractFileName(URI uri) {
+        String path = uri.getPath();
         int lastSlash = path.lastIndexOf('/');
         if (lastSlash >= 0 && lastSlash < path.length() - 1) {
             return path.substring(lastSlash + 1);
@@ -48,7 +97,7 @@ public class FileDownloadHttpClient implements FileDownloadClient {
         return path;
     }
 
-    private String detectContentType(String fileName) {
+    private String detectContentTypeFromFileName(String fileName) {
         int dotIndex = fileName.lastIndexOf('.');
         if (dotIndex < 0) {
             return "application/octet-stream";
@@ -60,6 +109,11 @@ public class FileDownloadHttpClient implements FileDownloadClient {
             case "gif" -> "image/gif";
             case "webp" -> "image/webp";
             case "svg" -> "image/svg+xml";
+            case "bmp" -> "image/bmp";
+            case "tiff", "tif" -> "image/tiff";
+            case "ico" -> "image/x-icon";
+            case "avif" -> "image/avif";
+            case "heic" -> "image/heic";
             case "pdf" -> "application/pdf";
             case "json" -> "application/json";
             case "xml" -> "application/xml";
